2013-01-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Chapter Structuring): node names with @
	throughout chapter.

2013-01-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (end titlepage, setchapternewpage,
	headings on off, paragraphindent, exampleindent): continue
	conversion to node names with @.

2013-01-02  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	* doc/texinfo.txi (Combining Indices):
	@synindex uses the "roman font for merged-from". 

2013-01-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (setfilename, settitle, copying, insertcopying,
	titlepage, titlefont center sp, title subtitle author,
	documentdescription, quotation, setfilename, settitle): continue
	conversion to node names with @.

2013-01-01  Karl Berry  <karl@gnu.org>

	* pretest 4.13.92.

	* util/Makefile.am (texinfo.cat): remove rule and references;
	not aware of anything using it, current rule fails distcheck.

	* util/tests: move the TeX-related tests (all unused) here
	from util/.

	* contrib: new directory; move contributed files from util/ there.

	* Pod-Simple-Texinfo/pod2texi.pl,
	* doc/texinfo.txi,
	* doc/refcard/txirefcard.tex,
	* info/info.c,
	* info/infokey.c,
	* install-info/install-info.c,
	* tp/texi2any.pl,
	* util/texi-elements-by-size,
	* util/texindex.c,
	* util/texi2dvi,
	* util/gendocs_template,
	* util/gendocs_template_min: 2013.

2013-01-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: received official GPLv3 exception text for
	texinfo.tex (RT licensing #502113).
        Same wording / no change in permissions.

2012-12-31  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (): mention
	--add-once, --align, --calign, --maxwidth, --max-width,
	inadvertently omitted when implemented.
	Also don't mention removals working with --entry.
	Report from Benno Schulenberg, 26 Dec 2012 19:34:40.

2012-12-30  Eli Zaretskii  <eliz@gnu.org>

	* configure.ac: Use $host, not $target, to detect MS-Windows
	builds, and set HOST_IS_WINDOWS if so.
